Configurando o worker consumidor e adicionando os pacotes necessários: esta é a etapa inicial na arquitetura do projeto.

--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
@@ -4,5 +4,57 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "Enrich": [
+      "FromLogContext",
+      "WithExceptionDetails"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            { "Name": "Console" },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/AudioGeraImagemWorker.log",
+                "fileSizeLimitBytes": "10000000",
+                "rollOnFileSizeLimit": "true",
+                "rollingInterval": "Day"
+              }
+            }
+          ]
+        }
+      }
+    ]
+  },
+  "MassTransit": {
+    "NomeFila": "Fila",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  },
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "Data Source=host;Initial Catalog=DB;Application Name=AudioGeraImagemWorker;Integrated Security=True;"
+  },
+  "OpenAI": {
+    "APIKey": "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",
+    //Transcribes audio into the input language.
+    "TranscriptionEndpoint": "https://api.openai.com/v1/audio/transcriptions",
+    "TranscriptionConfiguration": {
+      "model": "whisper-1",
+      "path": "TranscriptionAudios/",
+      "response-format": "verbose_json" //srt
+    },
+    "GenerateImageEndpoint": "https://api.openai.com/v1/images/generations",
+    "GenerateImageConfiguration": {
+      "model": "dall-e-3",
+      //number of images to generate
+      "n": 1,
+      "size": "1024x1024"
+    }
   }
 }
