--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
@@ -3,8 +3,14 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="Vendor\**" />
+	  <EmbeddedResource Remove="Vendor\**" />
+	  <None Remove="Vendor\**" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
@@ -17,14 +23,11 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Polly" Version="8.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\AudioGeraImagemWorker.Domain\AudioGeraImagemWorker.Domain.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Vendor\" />
+	  <ProjectReference Include="..\AudioGeraImagemWorker.Domain\AudioGeraImagemWorker.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
