Continuando o tratamento de estados nos processamentos dos comandos de gerar/salvar áudio, texto e imagem nas tabelas/storage.

--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
@@ -32,10 +32,20 @@
     ]
   },
   "MassTransit": {
-    "NomeFila": "Fila",
+    "NomeFila": "NomeFila",
     "Servidor": "localhost",
     "Usuario": "guest",
     "Senha": "guest"
+  },
+  "MassTransitAzure": {
+    "Conexao": "",
+    "NomeFila": ""
+  },
+  "AzureBlobConfiguration": {
+    "ConnectionString": "",
+    "AudioContainerName": "",
+    "ImageContainerName": "",
+    "BlobName": ""
   },
   "ConnectionStrings": {
     "ApplicationConnectionString": "Data Source=host;Initial Catalog=DB;Application Name=AudioGeraImagemWorker;Integrated Security=True;"
@@ -45,9 +55,7 @@
     //Transcribes audio into the input language.
     "TranscriptionEndpoint": "https://api.openai.com/v1/audio/transcriptions",
     "TranscriptionConfiguration": {
-      "model": "whisper-1",
-      "path": "TranscriptionAudios/",
-      "response-format": "verbose_json" //srt
+      "model": "whisper-1"
     },
     "GenerateImageEndpoint": "https://api.openai.com/v1/images/generations",
     "GenerateImageConfiguration": {
