--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
 			<PrivateAssets>all</PrivateAssets>
