--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
@@ -39,7 +39,13 @@
   },
   "MassTransitAzure": {
     "Conexao": "",
-    "NomeFila": "NomeFila"
+    "NomeFila": ""
+  },
+  "AzureBlobConfiguration": {
+    "ConnectionString": "",
+    "AudioContainerName": "",
+    "ImageContainerName": "",
+    "BlobName": ""
   },
   "ConnectionStrings": {
     "ApplicationConnectionString": "Data Source=host;Initial Catalog=DB;Application Name=AudioGeraImagemWorker;Integrated Security=True;"
@@ -49,9 +55,7 @@
     //Transcribes audio into the input language.
     "TranscriptionEndpoint": "https://api.openai.com/v1/audio/transcriptions",
     "TranscriptionConfiguration": {
-      "model": "whisper-1",
-      "path": "TranscriptionAudios/",
-      "response-format": "verbose_json" //srt
+      "model": "whisper-1"
     },
     "GenerateImageEndpoint": "https://api.openai.com/v1/images/generations",
     "GenerateImageConfiguration": {
