--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
@@ -43,8 +43,7 @@
   },
   "AzureBlobConfiguration": {
     "ConnectionString": "",
-    "AudioContainerName": "",
-    "ImageContainerName": "",
+    "ContainerName": "",
     "BlobName": ""
   },
   "ConnectionStrings": {
