--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.json
@@ -32,7 +32,7 @@
     ]
   },
   "MassTransit": {
-    "NomeFila": "NomeFila",
+    "NomeFila": "fila",
     "Servidor": "localhost",
     "Usuario": "guest",
     "Senha": "guest"
@@ -43,11 +43,10 @@
   },
   "AzureBlobConfiguration": {
     "ConnectionString": "",
-    "ContainerName": "",
-    "BlobName": ""
+    "ContainerName": ""
   },
   "ConnectionStrings": {
-    "ApplicationConnectionString": "Data Source=host;Initial Catalog=DB;Application Name=AudioGeraImagemWorker;Integrated Security=True;"
+    "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=DB;Integrated Security=True;TrustServerCertificate=True"
   },
   "OpenAI": {
     "APIKey": "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",
