--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MassTransit": {
+    "NomeFila": "fila",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  },
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=DB;Integrated Security=True;TrustServerCertificate=True"
+  }
 }
