--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
@@ -11,5 +11,8 @@
     "Servidor": "localhost",
     "Usuario": "guest",
     "Senha": "guest"
+  },
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=DB;Integrated Security=True;TrustServerCertificate=True"
   }
 }
