--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
@@ -49,18 +49,14 @@
     "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=DB;Integrated Security=True;TrustServerCertificate=True"
   },
   "OpenAI": {
-    "APIKey": "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",
-    //Transcribes audio into the input language.
-    "TranscriptionEndpoint": "https://api.openai.com/v1/audio/transcriptions",
-    "TranscriptionConfiguration": {
-      "model": "whisper-1"
+    "SecretKey": "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",
+    "TranscriptionParameters": {
+      "Url": "https://api.openai.com/v1/audio/transcriptions",
+      "Model": "whisper-1"
     },
-    "GenerateImageEndpoint": "https://api.openai.com/v1/images/generations",
-    "GenerateImageConfiguration": {
-      "model": "dall-e-3",
-      //number of images to generate
-      "n": 1,
-      "size": "1024x1024"
+    "ImageGeneratorParameters": {
+      "Url": "https://api.openai.com/v1/images/generations",
+      "Model": "dall-e-3"
     }
   }
 }
