--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Domain/AudioGeraImagemWorker.Domain.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Domain/AudioGeraImagemWorker.Domain.csproj
@@ -9,5 +9,6 @@
 	<ItemGroup>
 		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+		<PackageReference Include="Polly" Version="8.3.0" />
 	</ItemGroup>
 </Project>
