--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Infra/AudioGeraImagemWorker.Infra.csproj
@@ -13,6 +13,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Include="Vendor\BucketManager.cs" />
+	  <Compile Include="Vendor\Entities\OpenAI\OpenAIParameters.cs" />
+	  <Compile Include="Vendor\Entities\OpenAI\Response\ErrorResponse.cs" />
+	  <Compile Include="Vendor\Entities\OpenAI\Response\GerarImagemResponse.cs" />
+	  <Compile Include="Vendor\Entities\OpenAI\Response\GerarTranscricaoResponse.cs" />
+	  <Compile Include="Vendor\OpenAIVendor.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
