--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.Domain/AudioGeraImagemAPI.Domain.csproj
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.Domain/AudioGeraImagemAPI.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
 </Project>
