Refatoração no Worker

--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
@@ -33,6 +33,7 @@
   },
   "MassTransit": {
     "NomeFila": "fila",
+    "NomeFilaRetentativa": "retentativa",
     "Servidor": "localhost",
     "Usuario": "guest",
     "Senha": "guest"
