--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Domain/AudioGeraImagemWorker.Domain.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Domain/AudioGeraImagemWorker.Domain.csproj
@@ -8,6 +8,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+		<PackageReference Include="MassTransit.Quartz" Version="8.1.3" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
 		<PackageReference Include="Polly" Version="8.3.0" />
 	</ItemGroup>
