--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/AudioGeraImagemWorker.Worker.csproj
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/AudioGeraImagemWorker.Worker.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="MassTransit" Version="8.1.3" />
 		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+		<PackageReference Include="MassTransit.Quartz" Version="8.1.3" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.16" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
