Refatorando Tratativa de erro

--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
@@ -6,8 +6,34 @@
     }
   },
   "AllowedHosts": "*",
+  "Serilog": {
+    "Enrich": [
+      "FromLogContext",
+      "WithExceptionDetails"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            { "Name": "Console" },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/AudioGeraImagemWorker.log",
+                "fileSizeLimitBytes": "10000000",
+                "rollOnFileSizeLimit": "true",
+                "rollingInterval": "Day"
+              }
+            }
+          ]
+        }
+      }
+    ]
+  },
   "MassTransit": {
-    "NomeFila": "fila",
+    "Fila": "fila",
     "Servidor": "localhost",
     "Usuario": "guest",
     "Senha": "guest"
