Finalizando endpoints da API

--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.Development.json
@@ -21,7 +21,7 @@
             {
               "Name": "File",
               "Args": {
-                "path": "logs/AudioGeraImagemWorker.log",
+                "path": "logs/AudioGeraImagemAPI.log",
                 "fileSizeLimitBytes": "10000000",
                 "rollOnFileSizeLimit": "true",
                 "rollingInterval": "Day"
