--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.Domain/AudioGeraImagemAPI.Domain.csproj
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.Domain/AudioGeraImagemAPI.Domain.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Polly" Version="8.3.1" />
   </ItemGroup>
 
 </Project>
