--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
@@ -1,1 +1,44 @@
-{}
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Enrich": [
+      "FromLogContext",
+      "WithExceptionDetails"
+    ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            { "Name": "Console" },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "logs/AudioGeraImagemAPI.log",
+                "fileSizeLimitBytes": "10000000",
+                "rollOnFileSizeLimit": "true",
+                "rollingInterval": "Day"
+              }
+            }
+          ]
+        }
+      }
+    ]
+  },
+  "MassTransit": {
+    "Fila": "fila",
+    "Servidor": "localhost",
+    "Usuario": "guest",
+    "Senha": "guest"
+  },
+  "ConnectionStrings": {
+    "ApplicationConnectionString": "Data Source=VRNBK12DSV\\SQLEXPRESS;Initial Catalog=GeraImagem;Integrated Security=True;TrustServerCertificate=True"
+  }
+}
