--- a/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
+++ b/AudioGeraImagemWorker/AudioGeraImagemWorker.Worker/appsettings.Development.json
@@ -43,7 +43,7 @@
     "ContainerName": "openapi-files"
   },
   "ConnectionStrings": {
-    "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=GeraImagem;Integrated Security=True;TrustServerCertificate=True"
+    "ApplicationConnectionString": "Data Source=VRNBK12DSV\\SQLEXPRESS;Initial Catalog=GeraImagem;Integrated Security=True;TrustServerCertificate=True"
   },
   "OpenAI": {
     "SecretKey": "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",
