--- a/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
+++ b/AudioGeraImagemAPI/AudioGeraImagemAPI.API/appsettings.json
@@ -39,6 +39,6 @@
     "Senha": "guest"
   },
   "ConnectionStrings": {
-    "ApplicationConnectionString": "Data Source=VRNBK12DSV\\SQLEXPRESS;Initial Catalog=GeraImagem;Integrated Security=True;TrustServerCertificate=True"
+    "ApplicationConnectionString": "Data Source=localhost;Initial Catalog=GeraImagem;Integrated Security=True;TrustServerCertificate=True"
   }
 }
